--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,1 @@
-*{padding:0;margin:0;border:0;outline:0;box-sizing:border-box}header{color:#fff;text-align:center;padding:30px;background:#ef4836}
+*{padding:0;margin:0;border:0;outline:0;box-sizing:border-box}body{font-family:"Source Sans Pro";font-weight:300}body h1{font-weight:900}body article{margin:30px}body article img{width:100%;border-radius:2px;background:#B3B3B3}body article .meta{background-color:#fff}
