--- a/styles.scss
+++ b/styles.scss
@@ -10,13 +10,13 @@ body {
     font-family: "Source Sans Pro";
     font-weight: 300;
 
+    padding: 30px;
+
     h1 {
         font-weight: 900;
     }
 
     article {
-        margin: 30px;
-
         img {
             width: 100%;
             border-radius: 2px;
