--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,1 @@
-*{padding:0;margin:0;border:0;outline:0;box-sizing:border-box}body{font-family:"Source Sans Pro";font-weight:300;padding:30px}body h1{font-weight:900}body article img{width:100%;border-radius:2px;background:#B3B3B3}body article .meta{background-color:#fff}
+*{padding:0;margin:0;border:0;outline:0;box-sizing:border-box}body{font-family:"Source Sans Pro";font-weight:300;color:#222;padding:30px}body h1{font-weight:900}body article img{width:100%;border-radius:2px;background:#B3B3B3}body article .meta{background-color:#fff}
