--- a/styles.scss
+++ b/styles.scss
@@ -19,6 +19,8 @@ body {
         right: 0;
         background: rgba(253, 68, 74, 0.8);
         padding: 20px;
+        color: #fff;
+        font-size: 28px;
     }
 
     .faded {
@@ -26,6 +28,7 @@ body {
     }
 
     h1 {
+        margin-top: 48px;
         font-family: "Montserrat";
         font-size: 24px;
     }
@@ -35,7 +38,6 @@ body {
 
         img {
             width: 100%;
-            border-radius: 2px;
             background: #B3B3B3;
         }
 
@@ -71,7 +73,6 @@ body {
                     background: #bbb;
                     padding: 5px 10px;
                     margin: 0 4px;
-                    border-radius: 2px;
                 }
             }
         }
