Header bar shadow transition

--- a/styles.scss
+++ b/styles.scss
@@ -32,7 +32,12 @@ body {
         background: $primary;
         color: #fff;
         font-size: 28px;
-        box-shadow: 0 0 8px 0 rgba(0,0,0,0.4);
+        box-shadow: 0 0 4px 0 rgba(0,0,0,0.1);
+        transition: box-shadow 0.1s linear;
+
+        &.scroll {
+            box-shadow: 0 0 8px 0 rgba(0,0,0,0.4);
+        }
 
         .title {
             padding: 10px 30px;
@@ -62,7 +67,7 @@ body {
     }
 
     article {
-        margin-top: 30px;
+        margin-top: 20px;
         background: $white;
         border-radius: 2px;
         overflow: hidden;
@@ -103,6 +108,10 @@ body {
                     font-size: 14px;
                     margin-left: 20px;
                     font-weight: 600;
+
+                    &.selected {
+                        color: $primary;
+                    }
 
                     .icon {
                         font-size: 16px;
