--- a/styles.scss
+++ b/styles.scss
@@ -14,6 +14,8 @@ $dark: #b3b3b3;
     border: 0;
     outline: 0;
     box-sizing: border-box;
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+    -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -52,13 +54,13 @@ body {
             color: $semi-light;
 
             .icon {
-                font-size: 18px;
+                font-size: 19px;
             }
 
             input {
                 font-family: "Open Sans";
                 color: $dark;
-                font-size: 13px;
+                font-size: 14px;
                 font-weight: 600;
                 width: 100%;
                 padding-left: 12px;
@@ -86,14 +88,14 @@ body {
 
             .meta {
                 .location {
-                    font-size: 12px;
+                    font-size: 13px;
                     font-weight: 600;
                     color: $primary;
                 }
 
                 .time {
                     color: $dark;
-                    font-size: 10px;
+                    font-size: 11px;
                     margin-top: 2px;
                 }
             }
@@ -105,7 +107,7 @@ body {
                     display: inline-block;
                     text-decoration: none;
                     color: $dark;
-                    font-size: 12px;
+                    font-size: 13px;
                     margin-left: 20px;
                     font-weight: 600;
 
@@ -114,7 +116,7 @@ body {
                     }
 
                     .icon {
-                        font-size: 14px;
+                        font-size: 15px;
                     }
                 }
             }
