--- a/styles.scss
+++ b/styles.scss
@@ -42,7 +42,9 @@ body {
         }
 
         .title {
-            padding: 10px 20px;
+            padding: 20px;
+            font-weight: 600;
+            font-size: 15px;
         }
 
         .search {
