--- a/styles.scss
+++ b/styles.scss
@@ -34,19 +34,13 @@ body {
     padding-top: 134px;
 
     header {
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         right: 0;
         background: $primary;
         color: #fff;
         font-size: 28px;
-        box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
-        transition: box-shadow 0.1s linear;
-
-        &.scroll {
-            box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.4);
-        }
 
         .title {
             display: flex;
@@ -75,12 +69,25 @@ body {
         }
 
         .search {
+            //position: absolute;
             display: flex;
             align-items: center;
             width: 100%;
             padding: 15px 20px;
             background: $white;
             color: $semi-light;
+
+            box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.1s linear;
+
+            &.scroll {
+                box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.4);
+            }
+
+            &.fix {
+                position: fixed;
+                top: 0;
+            }
 
             .icon {
                 font-size: 19px;
@@ -107,10 +114,9 @@ body {
         padding: 25px 20px;
         box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.4);
         transition: transform 0.5s ease;
-        transform: translate3d(0, -421px, 0);
 
         &.down {
-            transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0) !important;
         }
 
         a {
@@ -124,28 +130,37 @@ body {
             }
 
             &.image {
+                position: relative;
                 margin-top: 20px;
                 font-weight: 600;
                 font-size: 0;
                 background: $secondary;
                 color: $white;
-                padding: 60px 0;
                 border-radius: 2px;
                 width: 100%;
                 text-align: center;
                 border-bottom: 2px solid $tertiary;
+                overflow: hidden;
 
-                .icon {
-                    display: inline-block;
-                    font-size: 20px;
-                    vertical-align: middle;
-                    margin-right: 10px;
+                img {
+                    width: 100%;
                 }
 
-                p {
-                    display: inline-block;
-                    font-size: 12px;
-                    vertical-align: middle;
+                .buttons {
+                    position: absolute;
+
+                    .icon {
+                        display: inline-block;
+                        font-size: 20px;
+                        vertical-align: middle;
+                        margin-right: 10px;
+                    }
+
+                    p {
+                        display: inline-block;
+                        font-size: 12px;
+                        vertical-align: middle;
+                    }
                 }
             }
 
@@ -160,6 +175,7 @@ body {
                 width: 100%;
                 text-align: center;
                 border-bottom: 2px solid $tertiary;
+                overflow: hidden;
 
                 .icon {
                     display: inline-block;
@@ -195,6 +211,7 @@ body {
             resize: none;
             border-radius: 2px;
             border-bottom: 2px solid $tertiary;
+            overflow: hidden;
         }
     }
 
