Added retina logo

--- a/styles.scss
+++ b/styles.scss
@@ -56,6 +56,10 @@ body {
             align-items: center;
             padding: 20px;
 
+            .logo {
+                height: 25px;
+            }
+
             .icons {
                 a {
                     text-decoration: none;
