--- a/styles.scss
+++ b/styles.scss
@@ -33,6 +33,8 @@ body {
     padding: 20px;
     background: $light;
     padding-top: 134px;
+    width: 350px;
+    margin: auto;
 
     header {
         position: fixed;
@@ -44,6 +46,8 @@ body {
         font-size: 28px;
         box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
         transition: box-shadow 0.1s linear;
+        width: 350px;
+        margin: auto;
 
 
         &.scroll {
@@ -110,6 +114,8 @@ body {
         padding: 25px 20px;
         box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.4);
         transition: transform 0.5s ease;
+        width: 350px;
+        margin: auto;
 
         &.down {
             transform: translate3d(0, 0, 0) !important;
