--- a/styles.scss
+++ b/styles.scss
@@ -33,8 +33,6 @@ body {
     padding: 20px;
     background: $light;
     padding-top: 134px;
-    width: 350px;
-    margin: auto;
 
     header {
         position: fixed;
@@ -45,13 +43,14 @@ body {
         color: #fff;
         font-size: 28px;
         box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
-        transition: box-shadow 0.1s linear;
-        width: 350px;
-        margin: auto;
-
+        transition: box-shadow 0.2s linear, transform 0.2s linear;
 
         &.scroll {
             box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.4);
+        }
+
+        &.showTitle {
+            box-shadow: 0 0 8px 0 rgba(0, 0, 0, 1);
         }
 
         .title {
@@ -114,8 +113,6 @@ body {
         padding: 25px 20px;
         box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.4);
         transition: transform 0.5s ease;
-        width: 350px;
-        margin: auto;
 
         &.down {
             transform: translate3d(0, 0, 0) !important;
