--- a/styles.css
+++ b/styles.css
@@ -195,31 +195,32 @@ body {
     /* line 230, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
     body article img {
       width: 100%;
-      cursor: pointer; }
-    /* line 235, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
+      cursor: pointer;
+      transform: translate3d(0, 0, -1); }
+    /* line 236, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
     body article .options {
       display: flex;
       align-items: center;
       justify-content: space-between;
       padding: 10px 20px; }
-      /* line 242, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
+      /* line 243, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
       body article .options .meta .location {
         font-size: 13px;
         font-weight: 600;
         color: #e95353; }
-        /* line 247, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
+        /* line 248, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
         body article .options .meta .location a {
           text-decoration: none;
           color: #e95353; }
-      /* line 253, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
+      /* line 254, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
       body article .options .meta .time {
         color: #b3b3b3;
         font-size: 11px;
         margin-top: 2px; }
-      /* line 260, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
+      /* line 261, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
       body article .options .buttons {
         font-size: 0; }
-        /* line 263, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
+        /* line 264, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
         body article .options .buttons a {
           display: inline-block;
           text-decoration: none;
@@ -227,13 +228,13 @@ body {
           font-size: 13px;
           margin-left: 20px;
           font-weight: 600; }
-          /* line 271, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
+          /* line 272, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
           body article .options .buttons a.selected {
             color: #e95353; }
-          /* line 275, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
+          /* line 276, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
           body article .options .buttons a.share .icon {
             font-size: 18px; }
-          /* line 279, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
+          /* line 280, /Users/Louis/Desktop/YRS/rubberneck/styles.scss */
           body article .options .buttons a .icon {
             font-size: 15px; }
 
