--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,5 @@
+@import "bourbon/bourbon";
+
 $primary: #e95353;
 $secondary: #d84545;
 $tertiary: #c54040;
@@ -43,7 +45,7 @@ body {
         color: #fff;
         font-size: 28px;
         box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
-        transition: box-shadow 0.2s linear, transform 0.2s linear;
+        @include transition(box-shadow 0.2s linear, transform 0.2s linear);
         z-index: 999;
 
         &.scroll {
@@ -70,7 +72,7 @@ body {
                     color: $white;
                     font-size: 28px;
                     margin-left: 20px;
-                    transition: color 0.1s linear;
+                    @include transition(color 0.1s linear);
 
                     &.disabled {
                         color: $tertiary;
@@ -113,7 +115,7 @@ body {
         font-size: 0;
         padding: 25px 20px;
         box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.4);
-        transition: transform 0.5s ease;
+        @include transition(transform 0.5s ease);
         z-index: 1000;
 
         &.down {
